--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ button:disabled { background: #444; cursor: wait; }
 
 <script>
 // Конфигурация OpenRouter
-const OPENROUTER_API_KEY = 'YOUR_OPENROUTER_API_KEY'; // Замените на ваш ключ
+const OPENROUTER_API_KEY = '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'; // Замените на ваш ключ
 const MODEL = 'google/gemma-2-27b-it:free';
 
 // Генерация уникального ID
